# TGA-photoshop

./: CMakeLists.txt  LICENSE  README.md  edit_functions.c  edit_functions.h  main.c  parameters_control.c  parameters_control.h
